DS-1015: Alignment fix

--- a/less/stb-layout.less
+++ b/less/stb-layout.less
@@ -9,6 +9,9 @@
 .container.article{
   .row{
     .ColumnMarginBottom(24px);
+    &.toc-list{
+      margin-bottom: 48px;
+    }
   }
 }
 
